--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,18 @@
     <!-- css -->
     <link rel="stylesheet" href="style.css" />
 
+    <!-- aos -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <title>React App Portofolio</title>
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- aos -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
