--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,13 @@
     <meta name="description" content="Web site created using create-react-app" />
 
     <!-- css -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/style.css" />
 
     <!-- aos -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+    <!-- icons -->
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
 
     <title>React App Portofolio</title>
   </head>
